--- a/C/Debug/debug.o.dSYM/Contents/Resources/Relocations/aarch64/debug.o.yml
+++ b/C/Debug/debug.o.dSYM/Contents/Resources/Relocations/aarch64/debug.o.yml
@@ -1,7 +1,7 @@
 ---
 triple:          'arm64-apple-darwin'
-binary-path:     "/Users/heonoo/Library/Mobile Documents/com~apple~CloudDocs/대학/coding/C/Debug/debug.o"
+binary-path:     "/Users/heonoo/Library/Mobile Documents/com~apple~CloudDocs/대학/coding/assignment_1-1/C/Debug/debug.o"
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100003EAC, symSize: 0xE0 }
-  - { offsetInCU: 0x41, offset: 0x41, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100003EAC, symSize: 0xE0 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100003E9C, symSize: 0xE8 }
+  - { offsetInCU: 0x41, offset: 0x41, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100003E9C, symSize: 0xE8 }
 ...
